force-app/main/default/objects/Application_Work_Experience_Provided__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Work Experiences Provided</relationshipLabel>
        <relationshipName>Application_Work_Experiences_Provided</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Submitted__c</fullName>
        <formula>IF( Work_Experience__r.Reference_Count__c &gt;1, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Experience__c</fullName>
        <label>Work Experience</label>
        <referenceTo>Work_Experience__c</referenceTo>
        <relationshipLabel>Application Provided On</relationshipLabel>
        <relationshipName>Application_Work_Experiences_Provided</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Application Work Experience Provided</label>
    <nameField>
        <displayFormat>AWEP-{000000}</displayFormat>
        <label>App. Work Experience Provided Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Work Experiences Provided</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>